# rp-poetry

./: .env  pyproject.toml
src/rp_poetry/: fastneon.py  main.py
tests/: test_main.py
