[tool.poetry]
name = "rp-poetry"
version = "0.1.0"
description = ""
authors = ["MuhammadAhsaanAbbasi <mahsaanabbasi@gmail.com>"]
readme = "README.md"
packages = [{include = "rp_poetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pytest = "^8.0.2"
httpx = "^0.27.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
